# obsidian

./: .gitignore  2022-10-18.md  note.md  package-lock.json  未命名.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  daily-notes.json  hotkeys.json  workspace.json
ADS/Hw/: 1.c  7.c
Compiler/Hw/: 2_6.py  chap5_6.md
Compiler/Project/Compiler/: CMakeLists.txt  README.md  architect.md  context_free.md  h.sh  obj_gen.sh  test.bc  test.ll  test.s  test1  visualization_text.txt
Compiler/Project/Compiler/src/: AST.cpp  CodeGeneration.cpp  CodeGeneration.hpp  Codegen_helper.hpp  Makefile  SymbolTable.h  lexer.cpp  lexer.l  main.cpp  parser.cpp  parser.hpp  parser.y  visualization.cpp
Compiler/Project/Compiler/test/: input.c
ComputerArchitecture/: Computer Organization.md
ComputerArchitecture/Slides/: .1 Fundamentals of Quantitative Design and Analysis.pdf.icloud  .2 Fundamentals of Quantitative Design and Analysis.pdf.icloud  .4 How to improve memory performance.pdf.icloud
ComputerNetwork/: Class-notes.md  Computer Network.md  Top-Down Aprroach.md
ComputerNetwork/Labs/: .Lab1.zip.icloud
ComputerNetwork/Slides/: .qjs_ch01.pdf.icloud  .qjs_ch02.pdf.icloud
ComputerOrganization/: Computer Organization.md  Notes_EN.md
ComputerOrganization/Hw/: Hw1.md  Hw3.md  TEE Notes.md
DataMining/Project/: .baseline与数据集.zip.icloud  Data Mining Project 1 时序数据预测.md  simple_sma.ipynb
DataMining/Slides/: .week1-02-Data.pdf.icloud  .week2-01-Preprocessing.pdf.icloud  .week2-02-OLAP.pdf.icloud  .week3-01-Basic Classification.pdf.icloud  .week3-02-Advanced Classification.pdf.icloud  .week4-01-Basic Clustering.pdf.icloud  .week4-02-Advanced Clustering.pdf.icloud  .week5-01-Basic FPM.pdf.icloud  .week5-02-Advanced FPM.pdf.icloud  .week6-01-Outlier Detection.pdf.icloud  .week6-02-Outlier Detection.pdf.icloud
DataStructure/: DataStructure.md
DataStructure/Slides/: .~DS06_Ch05_Priority Queues(2).ppt  DS01_Ch02_Algorithm Analysis(a)(1).ppt  DS02_Ch02_Algorithm Analysis(b)(2).ppt  DS02_Ch03_List(2).ppt  DS06_Ch05_Priority Queues(2).ppt  DS08_Ch09_Graph Definition_Topological Sort(2).ppt
DataStructure/pta/: a.out
DataStructure/tutorial/: .数据结构付费资料v2.0.pdf.icloud
Design/Notes/: Inst2Sec.md
Diary/: 2022-10-18.md  2022-10-19.md
ICS/Hw/: ICS Hw 1.md  ICS Hw2.md  ICS Hw3.md  ICS Hw4.md  ICS Hw5.md  ICS Hw6.md  ICS Hw7.md  ICS Hw8.md  ICS Hw9.md
MathNotes/: 概率论与数理统计.md
Mine/: Lexer.l  parser.y  parser1.y
NLP/: .2023-实验手册.zip.icloud  3200102555_李云帆.md  MindSpore学习资源汇总.docx  NLP课程实验.pptx  report_template.md
NLP/Assignment1-3200105264-汪张翼/: lab1_1.py  lab1_2.py
NLP/Reference Materials/: .Introduction_To_NLP.pdf.icloud  .Neural Network Methods for Natural Language Processing.pdf.icloud  .dlbook_cn_v0.5-beta.pdf.icloud  .神经网络与深度学习.pdf.icloud
Network/: Computer Network.md
OperatingSystem/: .overview.md.swp  NJUOperatingSystem.md  OperatingSystemConcepts.md  overview.md
OtherDocs/: Java Review.md  Java.md  创业启程观后感.md  十八大之前的严峻形势.md  毛概小组成绩分配表.docx
SelfLearning/: .lua.md.swp  lua.md
TheoryofComputation/: .TC01.pdf.icloud  .TC02.pdf.icloud  .TC03.pdf.icloud  .TC04.pdf.icloud  .TC05.pdf.icloud  Theory_of_Computation.md
slidev/: package-lock.json  package.json  slides.md
(+522 files in other folders)
